frontend/virtual/Include/libadalang.h

/* Data type for all nodes. Nodes are assembled to make up a tree.  See the
   node primitives below to inspect such trees.

   Unlike for contexts and units, this type has weak-reference semantics:
   keeping a reference to a node has no effect on the decision to keep the unit
   that it owns allocated. This means that once all references to the context
   and units related to a node are dropped, the context and its units are
   deallocated and the node becomes a stale reference: most operations on it
   will raise a ``Stale_Reference_Error``.

   Note that since reparsing an analysis unit deallocates all the nodes it
   contains, this operation makes all reference to these nodes stale as
   well.   */
typedef void* ada_base_node;
typedef struct ada_ada_node_array *ada_ada_node_array;
        



typedef struct {
        ada_internal_metadata md;
        ada_env_rebindings_type rebindings;
        ada_bool from_rebound;
} ada_internal_entity_info;
        



typedef struct {
        ada_base_node node;
        ada_internal_entity_info info;
} ada_base_entity;
struct ada_ada_node_array {
   int n;
   int ref_count;
   ada_base_entity items[1];
};
        



/* This field can contain one of the following nodes:

   * ada_char_literal

   * ada_dotted_name

   * ada_identifier

   * ada_string_literal  */
extern int ada_record_rep_clause_f_name(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* This field can contain one of the following nodes:

   * ada_allocator

   * ada_attribute_ref

   * ada_base_aggregate

   * ada_bin_op

   * ada_call_expr

   * ada_case_expr

   * ada_char_literal

   * ada_dotted_name

   * ada_explicit_deref

   * ada_identifier

   * ada_if_expr

   * ada_null_literal

   * ada_num_literal

   * ada_paren_expr

   * ada_qual_expr

   * ada_quantified_expr

   * ada_raise_expr

   * ada_string_literal

   * ada_target_name

   * ada_un_op  */
extern int ada_record_rep_clause_f_at_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* This field contains a list that itself contains one of the following nodes:

   * ada_component_clause

   * ada_pragma_node  */
extern int ada_record_rep_clause_f_components(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_aspect_spec_f_aspect_assocs(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* Returns the expression side of this assoc node.  */
extern int ada_base_assoc_p_assoc_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* This field can contain one of the following nodes:

   * ada_allocator

   * ada_attribute_ref

   * ada_base_aggregate

   * ada_bin_op

   * ada_call_expr

   * ada_case_expr

   * ada_char_literal

   * ada_dotted_name

   * ada_explicit_deref

   * ada_identifier

   * ada_if_expr

   * ada_membership_expr

   * ada_null_literal

   * ada_num_literal

   * ada_others_designator

   * ada_paren_expr

   * ada_qual_expr

   * ada_quantified_expr

   * ada_raise_expr

   * ada_string_literal

   * ada_target_name

   * ada_un_op  */
extern int ada_contract_case_assoc_f_guard(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* This field can contain one of the following nodes:

   * ada_allocator

   * ada_attribute_ref

   * ada_base_aggregate

   * ada_bin_op

   * ada_call_expr

   * ada_case_expr

   * ada_char_literal

   * ada_dotted_name

   * ada_explicit_deref

   * ada_identifier

   * ada_if_expr

   * ada_membership_expr

   * ada_null_literal

   * ada_num_literal

   * ada_paren_expr

   * ada_qual_expr

   * ada_quantified_expr

   * ada_raise_expr

   * ada_string_literal

   * ada_target_name

   * ada_un_op  */
extern int ada_contract_case_assoc_f_consequence(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_pragma_argument_assoc_f_id(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* This field can contain one of the following nodes:

   * ada_allocator

   * ada_attribute_ref

   * ada_base_aggregate

   * ada_bin_op

   * ada_call_expr

   * ada_case_expr

   * ada_char_literal

   * ada_dotted_name

   * ada_explicit_deref

   * ada_identifier

   * ada_if_expr

   * ada_membership_expr

   * ada_null_literal

   * ada_num_literal

   * ada_paren_expr

   * ada_qual_expr

   * ada_quantified_expr

   * ada_raise_expr

   * ada_string_literal

   * ada_target_name

   * ada_un_op  */
extern int ada_pragma_argument_assoc_f_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* Return the list of abstract formal parameters for this holder.  */
extern int ada_base_formal_param_holder_p_abstract_formal_params(
    ada_base_entity *node,


    ada_ada_node_array *value_p
);
        



/* Return the minimum number of parameters this subprogram can be called while
   still being a legal call.  */
extern int ada_base_formal_param_holder_p_nb_min_params(
    ada_base_entity *node,


    int *value_p
);
        



/* Return the maximum number of parameters this subprogram can be called while
   still being a legal call.  */
extern int ada_base_formal_param_holder_p_nb_max_params(
    ada_base_entity *node,


    int *value_p
);
        



/* Returns the type of each parameter of Self.  */
extern int ada_base_formal_param_holder_p_param_types(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_ada_node_array *value_p
);
        



/* Syntax property. Return the type expression node corresponding to the return
   of this subprogram spec.  */
extern int ada_base_subp_spec_p_returns(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* Returns the array of parameters specification for this subprogram spec.  */
extern int ada_base_subp_spec_p_params(
    ada_base_entity *node,


    ada_ada_node_array *value_p
);
        



/* Return the types of which this subprogram is a primitive of.  */
extern int ada_base_subp_spec_p_primitive_subp_types(
    ada_base_entity *node,


    ada_ada_node_array *value_p
);
        



/* Return the first type of which this subprogram is a primitive of.  */
extern int ada_base_subp_spec_p_primitive_subp_first_type(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* If this subprogram is a primitive for a tagged type, then return this
   type.   */
extern int ada_base_subp_spec_p_primitive_subp_tagged_type(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* Returns the return type of Self, if applicable (e.g. if Self is a
   subprogram). Else, returns null.  */
extern int ada_base_subp_spec_p_return_type(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_base_entity *value_p
);
        




extern int ada_entry_spec_f_entry_name(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* This field can contain one of the following nodes:

   * ada_attribute_ref

   * ada_bin_op

   * ada_call_expr

   * ada_char_literal

   * ada_dotted_name

   * ada_explicit_deref

   * ada_identifier

   * ada_qual_expr

   * ada_string_literal

   * ada_subtype_indication

   * ada_target_name  */
extern int ada_entry_spec_f_family_type(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_entry_spec_f_entry_params(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_subp_spec_f_subp_kind(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_subp_spec_f_subp_name(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_subp_spec_f_subp_params(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* This field can contain one of the following nodes:

   * ada_anonymous_type

   * ada_subtype_indication  */
extern int ada_subp_spec_f_subp_returns(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_component_list_f_components(
    ada_base_entity *node,


    ada_base_entity *value_p
);