frontend/virtual/Include/libadalang/libadalang-implementation-c.ads


   function ada_record_rep_clause_f_name
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_record_rep_clause_f_name";
      --  This field can contain one of the following nodes:
      --
      --  * Char_Literal
      --
      --  * Dotted_Name
      --
      --  * Identifier
      --
      --  * String_Literal

   function ada_record_rep_clause_f_at_expr
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_record_rep_clause_f_at_expr";
      --  This field can contain one of the following nodes:
      --
      --  * Allocator
      --
      --  * Attribute_Ref
      --
      --  * Base_Aggregate
      --
      --  * Bin_Op
      --
      --  * Call_Expr
      --
      --  * Case_Expr
      --
      --  * Char_Literal
      --
      --  * Dotted_Name
      --
      --  * Explicit_Deref
      --
      --  * Identifier
      --
      --  * If_Expr
      --
      --  * Null_Literal
      --
      --  * Num_Literal
      --
      --  * Paren_Expr
      --
      --  * Qual_Expr
      --
      --  * Quantified_Expr
      --
      --  * Raise_Expr
      --
      --  * String_Literal
      --
      --  * Target_Name
      --
      --  * Un_Op

   function ada_record_rep_clause_f_components
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_record_rep_clause_f_components";
      --  This field contains a list that itself contains one of the following
      --  nodes:
      --
      --  * Component_Clause
      --
      --  * Pragma_Node

   function ada_aspect_spec_f_aspect_assocs
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_aspect_spec_f_aspect_assocs";

   function ada_base_assoc_p_assoc_expr
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_assoc_p_assoc_expr";
      --  Returns the expression side of this assoc node.

   function ada_contract_case_assoc_f_guard
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_contract_case_assoc_f_guard";
      --  This field can contain one of the following nodes:
      --
      --  * Allocator
      --
      --  * Attribute_Ref
      --
      --  * Base_Aggregate
      --
      --  * Bin_Op
      --
      --  * Call_Expr
      --
      --  * Case_Expr
      --
      --  * Char_Literal
      --
      --  * Dotted_Name
      --
      --  * Explicit_Deref
      --
      --  * Identifier
      --
      --  * If_Expr
      --
      --  * Membership_Expr
      --
      --  * Null_Literal
      --
      --  * Num_Literal
      --
      --  * Others_Designator
      --
      --  * Paren_Expr
      --
      --  * Qual_Expr
      --
      --  * Quantified_Expr
      --
      --  * Raise_Expr
      --
      --  * String_Literal
      --
      --  * Target_Name
      --
      --  * Un_Op

   function ada_contract_case_assoc_f_consequence
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_contract_case_assoc_f_consequence";
      --  This field can contain one of the following nodes:
      --
      --  * Allocator
      --
      --  * Attribute_Ref
      --
      --  * Base_Aggregate
      --
      --  * Bin_Op
      --
      --  * Call_Expr
      --
      --  * Case_Expr
      --
      --  * Char_Literal
      --
      --  * Dotted_Name
      --
      --  * Explicit_Deref
      --
      --  * Identifier
      --
      --  * If_Expr
      --
      --  * Membership_Expr
      --
      --  * Null_Literal
      --
      --  * Num_Literal
      --
      --  * Paren_Expr
      --
      --  * Qual_Expr
      --
      --  * Quantified_Expr
      --
      --  * Raise_Expr
      --
      --  * String_Literal
      --
      --  * Target_Name
      --
      --  * Un_Op

   function ada_pragma_argument_assoc_f_id
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_pragma_argument_assoc_f_id";

   function ada_pragma_argument_assoc_f_expr
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_pragma_argument_assoc_f_expr";
      --  This field can contain one of the following nodes:
      --
      --  * Allocator
      --
      --  * Attribute_Ref
      --
      --  * Base_Aggregate
      --
      --  * Bin_Op
      --
      --  * Call_Expr
      --
      --  * Case_Expr
      --
      --  * Char_Literal
      --
      --  * Dotted_Name
      --
      --  * Explicit_Deref
      --
      --  * Identifier
      --
      --  * If_Expr
      --
      --  * Membership_Expr
      --
      --  * Null_Literal
      --
      --  * Num_Literal
      --
      --  * Paren_Expr
      --
      --  * Qual_Expr
      --
      --  * Quantified_Expr
      --
      --  * Raise_Expr
      --
      --  * String_Literal
      --
      --  * Target_Name
      --
      --  * Un_Op

   function ada_base_formal_param_holder_p_abstract_formal_params
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_ada_node_array)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_formal_param_holder_p_abstract_formal_params";
      --  Return the list of abstract formal parameters for this holder.

   function ada_base_formal_param_holder_p_nb_min_params
     (Node : ada_base_entity_Ptr;
Value_P    : access int) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_formal_param_holder_p_nb_min_params";
      --  Return the minimum number of parameters this subprogram can be called
      --  while still being a legal call.

   function ada_base_formal_param_holder_p_nb_max_params
     (Node : ada_base_entity_Ptr;
Value_P    : access int) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_formal_param_holder_p_nb_max_params";
      --  Return the maximum number of parameters this subprogram can be called
      --  while still being a legal call.

   function ada_base_formal_param_holder_p_param_types
     (Node : ada_base_entity_Ptr;
Origin     : access constant ada_base_entity;

      Value_P : access ada_ada_node_array) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_formal_param_holder_p_param_types";
      --  Returns the type of each parameter of Self.

   function ada_base_subp_spec_p_returns
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_subp_spec_p_returns";
      --  Syntax property. Return the type expression node corresponding to the
      --  return of this subprogram spec.

   function ada_base_subp_spec_p_params
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_ada_node_array)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_subp_spec_p_params";
      --  Returns the array of parameters specification for this subprogram
      --  spec.

   function ada_base_subp_spec_p_primitive_subp_types
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_ada_node_array)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_subp_spec_p_primitive_subp_types";
      --  Return the types of which this subprogram is a primitive of.

   function ada_base_subp_spec_p_primitive_subp_first_type
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_subp_spec_p_primitive_subp_first_type";
      --  Return the first type of which this subprogram is a primitive of.

   function ada_base_subp_spec_p_primitive_subp_tagged_type
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_subp_spec_p_primitive_subp_tagged_type";
      --  If this subprogram is a primitive for a tagged type, then return this
      --  type.

   function ada_base_subp_spec_p_return_type
     (Node : ada_base_entity_Ptr;
Origin     : access constant ada_base_entity;

      Value_P : access ada_base_entity) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_subp_spec_p_return_type";
      --  Returns the return type of Self, if applicable (e.g. if Self is a
      --  subprogram). Else, returns null.

   function ada_entry_spec_f_entry_name
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_entry_spec_f_entry_name";

   function ada_entry_spec_f_family_type
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_entry_spec_f_family_type";
      --  This field can contain one of the following nodes:
      --
      --  * Attribute_Ref
      --
      --  * Bin_Op
      --
      --  * Call_Expr
      --
      --  * Char_Literal
      --
      --  * Dotted_Name
      --
      --  * Explicit_Deref
      --
      --  * Identifier
      --
      --  * Qual_Expr
      --
      --  * String_Literal
      --
      --  * Subtype_Indication
      --
      --  * Target_Name

   function ada_entry_spec_f_entry_params
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_entry_spec_f_entry_params";

   function ada_subp_spec_f_subp_kind
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_subp_spec_f_subp_kind";

   function ada_subp_spec_f_subp_name
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_subp_spec_f_subp_name";

   function ada_subp_spec_f_subp_params
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_subp_spec_f_subp_params";

   function ada_subp_spec_f_subp_returns
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_subp_spec_f_subp_returns";
      --  This field can contain one of the following nodes:
      --
      --  * Anonymous_Type
      --
      --  * Subtype_Indication

   function ada_component_list_f_components
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_component_list_f_components";
